<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">AppAEI</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_tu_contrase_a">Tu contraseña</string>
    <string name="lbl">+</string>
    <string name="lbl_ingresar">Ingresar</string>
    <string name="lbl_tu_nombre">Tu nombre</string>
    <string name="lbl4">÷</string>
    <string name="lbl_ingresar_a_aei">Ingresar a AEI</string>
    <string name="lbl2">Χ</string>
    <string name="lbl_crear_usuario">Crear Usuario</string>
    <string name="lbl3">-</string>
    <string name="title_activity_loading_page">LoadingPageActivity</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="application_name_string">Aplicacin Educativa</string>
    <string name="loading_ek1_string">Loading</string>
    <string name="app_version_string">Version 1.0.0</string>
    <string name="___string">-</string>
    <string name="___ek1_string">+</string>

    <string name="achivement_text_string">Los animales</string>
    <string name="achivement_text_ek1_string">Hbitos de Higiene</string>
    <string name="achivement_text_ek2_string">Los colores</string>
    <string name="achivement_text_ek3_string">Las vocales</string>
    <string name="aprendamos_juntos_string">Aprendamos Juntos</string>
    <string name="achivement_text_ek4_string">Los sentidos</string>
    <string name="achivement_text_ek5_string">Las emociones</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
