<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appaei.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appaei.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appaei.ui.slideshow.SlideShowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_vocal_a"
        android:name="com.example.appaei.ui.FragmentVocalA"
        tools:layout="@layout/fragment_vocal_a" />
    <fragment
        android:id="@+id/nav_lista_user"
        android:name="com.example.appaei.ui.FragmentListarUser"
        android:label="Lista de Usuarios"
        tools:layout="@layout/fragment_listar_user" />

    <fragment
        android:id="@+id/nav_lista_resultado"
        android:name="com.example.appaei.ui.FragmentResultados"
        android:label="Lista Resultado"
        tools:layout="@layout/fragment_listar_user" />

    <fragment
        android:id="@+id/nav_config_ip"
        android:name="com.example.appaei.ui.ConfigurarIpFragment"
        android:label="Config. IP"
        tools:layout="@layout/fragment_configurar_ip" />



</navigation>