
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout android:id="@+id/frameLoginPage" android:layout_height="match_parent" android:layout_width="match_parent" style="@style/groupStylelight_blue_600">
        <LinearLayout android:id="@+id/linearLoginform" android:layout_gravity="top|center" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/_15pxh" android:layout_marginStart="@dimen/_15pxh" android:layout_marginTop="@dimen/_155pxv" android:layout_width="match_parent" android:orientation="vertical" android:paddingHorizontal="@dimen/_50pxh" android:paddingVertical="@dimen/_50pxv" style="@style/groupStylewhite_A700cornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtIngresaraaei" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_2pxv" android:layout_width="wrap_content" android:singleLine="true"  style="@style/txtBigShouldersTextbold24" android:text="Registrar Usuario"/>
            <LinearLayout android:gravity="start" android:id="@+id/linearUsername" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_18pxv" android:layout_width="wrap_content" android:orientation="vertical">
                <TextView android:ellipsize="end" android:id="@+id/txtTunombre" android:text="Ingresar Correo" android:layout_height="wrap_content" android:layout_width="wrap_content" android:singleLine="true" style="@style/txtSorasemibold14" tools:text="Correo"/>

                <EditText
                    android:id="@+id/emailEditText"
                    style="@style/etSolidRoundedOutline"
                    android:layout_width="241dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_20"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPassword"
                android:layout_width="251dp"
                android:layout_height="104dp"
                android:layout_marginTop="@dimen/_19pxv"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTucontrasea"
                    style="@style/txtSorasemibold14"
                    android:layout_width="292dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="Ingresar Contrasenha"
                    tools:text="Password" />

                <EditText
                    android:id="@+id/passwordEditText"
                    style="@style/etSolidRoundedOutline"
                    android:layout_width="241dp"
                    android:layout_height="51dp"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:background="@drawable/rectangle_bg_white_a700_border_gray_600_radius_20"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:singleLine="true"

                    tools:ignore="Autofill" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                style="@style/btnSolidRounded"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20pxv"
                android:drawableStart="@drawable/img_bxlogin_1"
                android:drawablePadding="@dimen/_5pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_16pxv"
                android:singleLine="true"
                android:textAllCaps="false"
                android:text="Crear Usuario" />
        </LinearLayout>

        <LinearLayout android:id="@+id/linearColumncolorfulc" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical">

            <ImageView
                android:id="@+id/imageColorfulcute"
                imageRes="@{@drawable/img_colorful_cute_playful}"
                android:layout_width="373dp"
                android:layout_height="319dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_colorful_cute_playful" />

            <View
                android:id="@+id/viewView"
                android:layout_width="440dp"
                android:layout_height="281dp" />

            <FrameLayout android:gravity="center_horizontal" android:id="@+id/frameStack" android:layout_height="@dimen/_201pxv" android:layout_width="match_parent">

                <FrameLayout
                    android:id="@+id/frameStackvectors"
                    android:layout_width="match_parent"
                    android:layout_height="251dp"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/imageVectorsOne"
                        imageRes="@{@drawable/img_vectors}"
                        android:layout_width="553dp"
                        android:layout_height="191dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_vectors" />

                    <LinearLayout
                        android:id="@+id/linearRowsymbolfooter"
                        android:layout_width="match_parent"
                        android:layout_height="165dp"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="@dimen/_23pxv"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/frameStacksymbolfoot"
                            android:layout_width="@dimen/_57pxh"
                            android:layout_height="@dimen/_57pxv"
                            android:layout_marginTop="@dimen/_15pxv"
                            android:layout_marginBottom="@dimen/_58pxv">

                            <ImageView
                                android:id="@+id/imageSymbolfooter"
                                android:layout_width="@dimen/_57pxh"
                                android:layout_height="@dimen/_57pxh"
                                android:layout_gravity="center"
                                android:scaleType="fitXY"
                                android:src="@drawable/img_symbol_footer"
                                tools:ignore="ContentDescription"
                                tools:src="@drawable/img_symbol_footer" />

                            <TextView
                                android:id="@+id/txt"
                                style="@style/txtBigShouldersStencilTextbold24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:ellipsize="end"
                                android:singleLine="true"

                                tools:text="@string/lbl" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/frameStackcrear"
                            android:layout_width="@dimen/_276pxh"
                            android:layout_height="@dimen/_130pxv"
                            android:layout_marginStart="@dimen/_4pxh">

                            <LinearLayout
                                android:id="@+id/linearColumnsymbolfoo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:layout_marginStart="@dimen/_216pxh"
                                android:orientation="vertical">

                                <FrameLayout
                                    android:id="@+id/frameStacksymbolfoot1"
                                    android:layout_width="@dimen/_60pxh"
                                    android:layout_height="@dimen/_60pxv">

                                    <ImageView
                                        android:id="@+id/imageSymbolfooter1"
                                        android:layout_width="@dimen/_60pxh"
                                        android:layout_height="@dimen/_60pxh"
                                        android:layout_gravity="center"
                                        android:scaleType="fitXY"
                                        android:src="@drawable/img_symbol_footer_yellow_900"
                                        tools:ignore="ContentDescription"
                                        tools:src="@drawable/img_symbol_footer_yellow_900" />

                                    <TextView
                                        android:id="@+id/txt1"
                                        style="@style/txtBigShouldersStencilTextbold18"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:ellipsize="end"
                                        android:singleLine="true"

                                        tools:text="@string/lbl2" />
                                </FrameLayout>

                                <FrameLayout
                                    android:id="@+id/frameStacksymbolfoot2"
                                    android:layout_width="@dimen/_49pxh"
                                    android:layout_height="@dimen/_49pxv"
                                    android:layout_marginTop="@dimen/_21pxv">

                                    <ImageView
                                        android:id="@+id/imageSymbolfooter2"
                                        android:layout_width="@dimen/_49pxh"
                                        android:layout_height="@dimen/_49pxh"
                                        android:layout_gravity="center"
                                        android:scaleType="fitXY"
                                        android:src="@drawable/img_symbol_footer_amber_600"
                                        tools:ignore="ContentDescription"
                                        tools:src="@drawable/img_symbol_footer_amber_600" />

                                    <TextView
                                        android:id="@+id/txtOne"
                                        style="@style/txtBigShouldersStencilTextbold24"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:ellipsize="end"
                                        android:singleLine="true"

                                        tools:text="@string/lbl3" />
                                </FrameLayout>
                            </LinearLayout>
                        </FrameLayout>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout android:id="@+id/frameStacksymbolfoot3" android:layout_gravity="bottom|start" android:layout_height="@dimen/_60pxv" android:layout_marginBottom="@dimen/_13pxv" android:layout_marginStart="@dimen/_10pxh" android:layout_width="@dimen/_60pxh">

                    <ImageView
                        android:id="@+id/imageSymbolfooter3"
                        android:layout_width="@dimen/_60pxh"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_symbol_footer_pink_500"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_symbol_footer_pink_500" />
                    <TextView android:ellipsize="end" android:id="@+id/txtTwo" android:layout_gravity="center" android:layout_height="wrap_content" android:layout_width="wrap_content" android:singleLine="true"  style="@style/txtBigShouldersStencilTextbold36" tools:text="@string/lbl4"/>
                </FrameLayout>
            </FrameLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </FrameLayout>
</layout>